tdf#93536 - avoid crash when calling ToTop on disposed window.

Change-Id: I677f47f6b60271dc56c9d3d123cf982c00866eb9